Update birthday wishes signature

--- a/public/content/birthday/config.json
+++ b/public/content/birthday/config.json
@@ -2,7 +2,7 @@
     "title": "Happy 18th Birthday, Tanushri!",
     "subtitle": "A Special Birthday Message",
     "description": "From building with LEGO bricks to programming autonomous robots, from writing your first story to leading an award-winning yearbook, from sketching your first app to publishing RoboTrack on the App Store. Every year brought new dreams, and we've watched you chase every single one.",
-    "letter": "Tanushri, watching you grow from a curious little girl into this incredible young woman has been the greatest joy of my life. From your first robotics competition to presenting at nationals, from late nights perfecting yearbook layouts to coding RoboTrack to help your team - you've shown us what dedication and passion look like. As you head off to study Aerospace Engineering, remember that the sky isn't the limit for you, it's just the beginning. This website is my small gift to celebrate you and all you've accomplished. I can't wait to see you soar. Love always, Dad",
+    "letter": "Tanushri, watching you grow from a curious little girl into this incredible young woman has been the greatest joy of my life. From your first robotics competition to presenting at nationals, from late nights perfecting yearbook layouts to coding RoboTrack to help your team - you've shown us what dedication and passion look like. As you head off to study Aerospace Engineering, remember that the sky isn't the limit for you, it's just the beginning. This website is my small gift to celebrate you and all you've accomplished. I can't wait to see you soar. Love always, Appa, Amma, Manasi",
     "photos": [
         {
             "year": 2026,
